# kissat

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: kissatConfig.cmake.in
examples/: CMakeLists.txt  example.cpp
include/: kissatlib.h
src/: CMakeLists.txt  KissatSolver.cpp  KissatSolver.h  build.h  colors.c  file.c  print.c  resources.c
tests/: CMakeLists.txt  tests.cpp
